--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 <script>var std_url = '<%= root_url %>';</script>
 <%= render "shared/locked_modal" %>
 <div class="container body">
+  <%= render "layouts/explore_modal" %>
   <%= render "layouts/header" %>
   <section id="content">
     <% flash.each do |key, value| %>
