--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <% if signed_in? %>
         <ul class="top_nav_bar">
           <li><%= link_to "Home", root_path %></li>
-          <% if @enable_browsing %><li><%= link_to "Explore", explore_path %></li><% end %>
+          <% if @enable_browsing %><li><a class="explore_link" style="cursor: pointer;">Explore</a></li><% end %>
           <% if @enable_user_creation %><li><%= link_to "Create", create_path %></li><% end %>
           <li>
             <a href="<%= user_url(current_user) %>">
@@ -22,15 +22,6 @@
         <% end %>
         <ul class="nav secondary-nav top_nav_bar">
           <% if signed_in? %>
-            <% if @enable_tour %>
-            <li>
-              <% if @enable_administation %>
-              <%= link_to "Take the tour", tours_path %>
-              <% else %>
-              <%= link_to "Take the tour", user_tour_tour_path(1) %>
-              <% end %>
-            </li>
-            <% end %>
             <% unless current_user.is_anonymous %>
             <li><%= link_to "Sign out", signout_path, :method => :delete, :id => "signout_link" %></li>
             <% end %>
