--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -1,7 +1,7 @@
 :javascript
   $(function(){
     $(".persona_select").on("ajax:success", function(xhr, data){
-      $(".exploretiledetailsarea").replaceWith(data);
+      $(".exploretiledetailsarea") 
     });
   });
 
@@ -17,11 +17,12 @@
   
 %div.explorenewusercontent
   %div.exploreheader
+    %button.btn{ style:"float:right; margin: 0 10px 0 0;", onclick: "$(this).parents('.modal').fadeOut('fast');" } Close
     %h1{ style: "font-size: 23px; margin-bottom: 8px;" }
       %strong Explore: Pick a path...
     %div
       %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px" }
-      %p{ style: "font-size: 15px; line-height: 28px; display:inline;"} Blah Blah Blah
+      %p{ style: "font-size: 15px; line-height: 28px; display:inline; "} Blah Blah Blah
   %hr{ style: "margin:0px;" }
   %div.exploretiles
     - @personas.each do |persona|
