New administrative features for the administration page.

--- a/app/assets/stylesheets/core.css
+++ b/app/assets/stylesheets/core.css
@@ -2,6 +2,7 @@
 .tab_header h1 { padding: 4px 0px 0px 0px; margin-left: 50px; }
 .tab_header img { float:left; width: 40px; height: 40px; }
 .tab_content { min-height: 300px; }
+.tabs .active > a { border-bottom-color: #DDD; }
 
 /* Section Continue */
 .progress-box { margin-bottom: 40px; font-size: 22px;  }
