--- a/app/views/paths/_dashboard_users.html.haml
+++ b/app/views/paths/_dashboard_users.html.haml
@@ -6,15 +6,18 @@
       = hidden_field_tag("mode", "users")
       = select_tag("user", options_from_collection_for_select(@enrolled_users, "id", "name"))
       = submit_tag("Go", class: "btn primary")
-    %h3 Submitted answers for #{@user.name}
+    %h3= @user.name
     - if @responses.empty?
       %p{ style: "margin-top: 30px;" } There are no responses for this user yet.
     - else
+      %p #{@responses.size.to_s} questions answered, #{@percentage_correct.to_s}% correct 
       %ol
         - @responses.each do |r|
           %li{ style:"padding:15px; color:#404040;" }
             %p{ style: "font-size: 16px; font-weight:bold; margin-bottom: 20px;" }= r.task.question
-            - if r.task.answer_sub_type == 100
+            - if r.task.answer_type == 2
+              %p= Answer.find(r.answer_id).content
+            - elsif r.task.answer_sub_type == 100
               %blockquote
                 %p= r.submitted_answer.content
             - elsif r.task.answer_sub_type == 101
