Adding arena, displaying dashboard by default if coming from arena.

--- a/app/views/paths/community.html.haml
+++ b/app/views/paths/community.html.haml
@@ -1,4 +1,4 @@
-= render "paths/popups/launchpad"
+= render "paths/popups/launchpad", { display: @display_dashboard }
 %section
   %div#topsection
     %div#updatespace
