--- a/app/views/mailer/path_result.html.erb
+++ b/app/views/mailer/path_result.html.erb
@@ -1,9 +1,9 @@
-<% if @is_passed %>
-<p>Congratulations on passing the <%= @path.name %> <%= @name_for_paths %> with a score of <%= @enrollment.percentage_correct %>%.</p>
-<p>Your score has been logged in your profile and sent to the <%= @current_company.name %> team. If you are not yet a senior researcher and would like to become one, please email support@infoarmy.com to get started.</p>
-<% else %>
 <p>Hello <%= @user.name %>,</p>
-<p>Unfortunately you did not get a high enough score to pass the <%= @path.name %> <%= @name_for_paths %>. You got <%= @enrollment.percentage_correct %>% correct, and you need to get <%= @path.passing_score %>% or better. Don't worry, you can try again, but first you'll need to complete another report to get more practice. Once you do so, please email support@infoarmy.com to take the certification test again.</p>
+<% if @is_passed %>
+<p>Congratulations on passing the <%= @path.name %> <%= @path.name.downcase.include?("certification") ? "" : @name_for_paths %> with a score of <%= @enrollment.percentage_correct %>%.</p>
+<p>Your score has been logged in your profile and sent to the <%= @current_company.name %> team. If you are not yet a Senior Researcher and would like to become one, please email support@infoarmy.com to get started.</p>
+<% else %>
+<p>Unfortunately you did not get a high enough score to pass the <%= @path.name %> <%= @path.name.downcase.include?("certification") ? "" : @name_for_paths %> with a score of <%= @enrollment.percentage_correct %>% correct. Don't worry, you can try again, but first you'll need to complete another report to get more practice. Once you do so, please email support@infoarmy.com to take the certification test again.</p>
 <% end %>
 <p>Sincerely,</p>
 <p>-The <%= @current_company.name %> Team</p>
