--- a/app/views/paths/_dashboard_users.html.haml
+++ b/app/views/paths/_dashboard_users.html.haml
@@ -1,16 +1,30 @@
-%section{ style: "min-height: 300px;"}
+%section{ style: "min-height: 300px; margin-left: 15px;"}
   - if @user.nil?
     %p There are no users for this #{name_for_paths} yet.
   - else
     = form_tag(dashboard_path_path(@path), style: "float: right;", method: "get") do
       = hidden_field_tag("mode", "users")
       = select_tag("user", options_from_collection_for_select(@enrolled_users, "id", "name"))
-      = submit_tag("Go", class: "btn primary")
+      = submit_tag("View", class: "btn primary")
     %h3= @user.name
     - if @responses.empty?
       %p{ style: "margin-top: 30px;" } There are no responses for this user yet.
     - else
-      %p #{@responses.size.to_s} questions answered, #{@percentage_correct.to_s}% correct 
+      %p #{@responses.size.to_s} questions answered, #{@percentage_correct.to_s}% correct
+      - if @enrollment.is_complete
+        - if @enrollment.is_passed
+          %span.label.success Passed
+        - else
+          %span.label Failed
+      - else
+        = form_tag(grade_enrollment_path(@enrollment), method: "put") do
+          %div.row{ style: "margin-left: 0px;" }
+            %label{ style: "width: inherit; margin-bottom: 10px;" }
+              = check_box_tag("send_email") 
+              %span Send automatic email to user
+          %div.row{ style: "margin-left: 0px;" }
+            = submit_tag("Pass", class: "btn primary")
+            = submit_tag("Fail", class: "btn")
       %ol
         - @responses.each do |r|
           %li{ style:"padding:15px; color:#404040;" }
