--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -217,11 +217,8 @@
 .quizheader span{ font:normal 29px'Muli', sans-serif; position:relative; left:5px;}
 #progressbar{width:632px; height: 40px; margin: 0 auto;}
 .questionandresponsespace{display:inline-block; }
-.questionspace{}
 .questionspace span{font:normal 18px 'Muli', sans-serif;}
-.questionfooter{}
 .pointbar{height:20px; background-color:#FFA366; text-align: center; margin:3px 0px;}
-.pointbar span{}
 .nextbutton{float:right;}
 .responsespace{margin-top:8px;}
 .responsespace li{background-color: #F9F9F9; padding:5px 8px; border-radius:6px; margin-bottom:5px; cursor:pointer;border:1px solid rgba(0, 0, 0, .1) }
@@ -231,3 +228,14 @@
 .streakspace{display:inline-block; text-align:center; margin-left:25px;}
 .counterbox{border:1px solid rgba(0, 0, 0, .1); background-color:white; border-radius:4px; padding: 7px 7px 0;}
 .messagespace{margin:12px 9px 0 37px; font-size:15px; word-wrap:normal; width:240px; font-weight:bold;}
+
+.quizcontainer {overflow:hidden; width:768px;margin-left:auto;margin-right:auto;margin-top:100px; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
+.CRquizspace {background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:12px; min-height:300px;}
+.label.notice {font-size:13px; float:right; margin:2px 6px 0 0; background-color:#3A87AD}
+#CRprogressbar {width:632px; height: 40px; margin: 0 auto;}
+.CRquestionspace {width:40%; display:inline-block; padding-top:9px;}
+.CRquestionheader {font:bold 18px 'Muli', sans-serif;}
+.CRquestion {font-size:15px; position:relative; top:13px;} 
+.CRresponsespace {display:inline-block;background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:9px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'Muli', sans-serif;width:56.5%;}
+.CRresponsespace textarea {display:block; margin:6px 12px 12px 12px; width:94%;}
+.CRbuttonspace {margin-top:12px; }
