--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -1,65 +1,63 @@
-= form_tag({ :controller => :sections, :action => "continue" }, :remote => true, :method => "post", "data-type" => "html", :id => "challenge_form") do
+%div.quizcontainer
   :javascript
     $(function(){
-      $('#challenge_form').submit(function(){
-        $(".loading_image").show();
-        $("#submit_button").attr("disabled","disabled");
+      $(".answer_content").click(function(){
+        $(this).find("input").attr("checked", "checked");
+        $("#challenge_form").submit();
       });
-      $('input[name=answer]').click(function(){
-        $("input[name='answer']").removeClass('selected_answer');
-        $(this).parent().addClass('unselected_answer');
+      $("#challenge_form").on("ajax:success", function(xhr, data){
+        $("#answer_"+data.correct_answer).css("background-color", "green");
+        if(data.correct_answer != data.supplied_answer){
+          $("#answer_"+data.supplied_answer).css("background-color", "red");
+        }
+      });
+      $("#nextbutton").on("ajax:success", function(xhr, data){
+        $(".quizcontainer").fadeOut('slow', function(){
+          $(this).replaceWith(data).fadeIn();
+        });
       });
     });
-  %div.quizcontainer
-    %div.quizspace
-      %div.quizheader
-        = image_tag @path.path_pic, size: "40x40"
-        %div{ style: "display:inline-block;" }
-          %span <strong>#{@path.name}:</strong> #{@section.name}</span>
-          %div#idprogressbar
-      %div{ style: "margin: auto;" }
-        = render "stored_resource", { :stored_resource => @stored_resource }
-      %div.questionandresponsespace{ style: "width: 430px;" }
-        %div.questionspace
-          %span= @task.question
-        %div.questionfooter
-          %div.pointbar 100 points
-        %div.responsespace
+  :css
+    .body.container { border: 0px; background-color: transparent; box-shadow: none; margin-top: -40px; }  
+  %div.quizspace
+    %div.quizheader
+      = image_tag @section.path.path_pic, size: "40x40"
+      %div{ style: "display:inline-block;" }
+        %span <strong>#{@section.path.name}:</strong> #{@section.name}</span>
+        %div#idprogressbar
+    %div{ style: "margin: auto;" }
+      = render "stored_resource", { :stored_resource => @stored_resource }
+    %div.questionandresponsespace{ style: "width: 430px;" }
+      %div.questionspace
+        %span= @task.question
+      %div.questionfooter
+        %div.pointbar 100 points
+      %div.responsespace
+        = form_tag(complete_section_path(@section.id), :remote => true, :method => "put", :id => "challenge_form") do
+          = hidden_field_tag :task_id, @task.id
+          = hidden_field_tag :points_remaining, 100
           %ol{ style: "list-style-position: inside; margin-left: 0px;" }
             - @answers.each do |a|
-              %li{ onclick: "$(this).find('input').attr('checked', 'checked');" }
+              %li.answer_content{ id: "answer_#{a.id}" }
                 = radio_button_tag :answer, a.id, false, style: "display: none;"
                 %span= a.content
-          %button.btn.danger.nextbutton Next
-      %div{ style: "display:inline-block; vertical-align:top;" }
-        %div.pointsandstreakspace
-          %div.pointspace.counterbox
-            %span.counter
-              - (1..4).each do
-                %span.digit
-                  %span{ title: "0" } 0
-            %br
-            %span Points
-          %div.streakspace.counterbox
-            %span.counter
-              - (1..2).each do
-                %span.digit
-                  %span{ title: "0" } 0
-            %br
-            %span Streak
-        %div.messagespace{ style: "text-align: right; margin: 12px 0px 0px 25px; width: 258px;" }
-          - if !@free_response && @points_awarded   
-            - if @correct == true
-              %p{ style: "text-decoration:underline; font-weight: bold; color:#57A957;" } Correct!
-              %p{ style: "color: green;" } <strong>+#{@points_awarded >= 10 ? 10 : @points_awarded} points</strong>
-            - elsif @correct == false
-              %p{ style: "color: red;" } Incorrect
-          - if @streak_name
-            %p{ style: "text-decoration:underline;color:darkcyan;" } Achievement: <strong style="text-transform:uppercase;">#{@streak_name}
-            %p
-              %strong +#{@streak_points.to_i}
-              %span points
-          - if @leaderboard
-            %p{ style: "color:darkgoldenrod;" } Passed #{@leaderboard.user.name}'s score #{@leaderboard.score}
-          - unless @section.instructions.blank?
-            %p= link_to "Review Section Content", @section, style: "float:right;"
+        = link_to "Next", continue_section_path(@section.id), id: "nextbutton", remote: true, class: "btn danger", method: "post" 
+    %div{ style: "display:inline-block; vertical-align:top;" }
+      %div.pointsandstreakspace
+        %div.pointspace.counterbox
+          %span.counter
+            - (1..4).each do
+              %span.digit
+                %span{ title: "0" } 0
+          %br
+          %span Points
+        %div.streakspace.counterbox
+          %span.counter
+            - (1..2).each do
+              %span.digit
+                %span{ title: "0" } 0
+          %br
+          %span Streak
+      %div.messagespace{ style: "text-align: right; margin: 12px 0px 0px 25px; width: 258px;" }
+        - unless @section.instructions.blank?
+          %p= link_to "Review Section Content", @section, style: "float:right;"
