--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -218,7 +218,8 @@
 #progressbar{width:632px; height: 40px; margin: 0 auto;}
 .questionandresponsespace{display:inline-block; }
 .questionspace span{font:normal 18px 'Muli', sans-serif;}
-.pointbar{height:20px; background-color:#FFA366; text-align: center; margin:3px 0px;}
+.pointbar{height:20px; text-align: center; margin:3px 0px;}
+.pointbarfiller{background-color:#FFA366; width: 100%; border-radius: 3px;}
 .nextbutton{float:right;}
 .responsespace{margin-top:8px;}
 .responsespace li{background-color: #F9F9F9; padding:5px 8px; border-radius:6px; margin-bottom:5px; cursor:pointer;border:1px solid rgba(0, 0, 0, .1) }
