--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -20,14 +20,14 @@
             %h1= @user.name
         %div.challengecarousel
           %ul.inlinedisplay
-            %li
-              %div.mosaic-block.bar2
-                %a.mosaic-overlay{ href: "#", target: "_blank" }
-                  %div.details
-                    %h4 New Challenge added!
-                    %p Kitten Throwing!
-              %div
-                %img.mosaic-backdrop{ src: "http://www.placekitten.com/200/80" }
+            - @enrolled_paths.each do |p|
+              %li
+                %div.mosaic-block.bar2
+                  = link_to community_path_path(p), class: "mosaic-overlay", target: "_blank" do
+                    %div.details
+                      %h4= p.name
+                  %div
+                    %img.mosaic-backdrop{ src: p.path_pic }
   %div.row
     %div.span5
       %div.leftbox
@@ -55,7 +55,7 @@
               = link_to c do
                 = image_tag c.path_pic, class: "leftrailicon"
     %div.span11
-      %div.newsfeed
+      %div.newsfeed{ style: "min-height: 285px;" }
         %div.leftboxheader
           %div
             %span Stream
