--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,10 +3,21 @@
 %html
   %head
     = render "layouts/head"
+    - if Rails.env == "production"
+      :javascript
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-28492737-1']);
+        _gaq.push(['_trackPageview']);
+        
+        (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
   %body
     %div#fb-root
       :javascript
-        var std_url = '<%= root_url %>';
+        var std_url = '#{root_url}';
     %div.container.body
       = render "layouts/header"
       = render "layouts/explore_modal" if current_user
