--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -22,7 +22,7 @@
       %strong Explore: Pick a path...
     %div
       %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px" }
-      %p{ style: "font-size: 15px; line-height: 28px; display:inline; "} Blah Blah Blah
+      %p{ style: "font-size: 15px; line-height: 28px; display:inline; "} Which path will you choose? Challenges are organized according to path. You can always enroll in multiple paths. 
   %hr{ style: "margin:0px;" }
   %div.exploretiles
     - @personas.each do |persona|
