--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -1,29 +1,3 @@
-/* Font */
-@font-face {
-  font-family: 'Dosis';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Dosis Regular'), local('Dosis-Regular'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/Ewe0SEXPrakEimFzbOGwB6CWcynf_cDxXwCLxiixG1c.woff) format('woff');
-}
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Muli'), url(http://themes.googleusercontent.com/static/fonts/muli/v4/minRpKQdEvXRRS8oAbAtWvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
-}
-@font-face {
-  font-family: 'Arvo';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Arvo Bold Italic'), local('Arvo-BoldItalic'), url(http://themes.googleusercontent.com/static/fonts/arvo/v5/Vj6JEk1YZr8j8R8H2j0b-rO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
-}
-@font-face {
-  font-family: 'Dosis';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Dosis SemiBold'), local('Dosis-SemiBold'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/f8qltGyj2S-SS_tsOHsjgXYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
-}
-
 /* Stream */
 .newsfeed h4{ margin:9px 10px 10px 10px; font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:10%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
 .newsfeed p{ margin:9px 12px; font:300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color:#aaa;}
@@ -68,8 +42,8 @@
 .leftstuff { float:left; }
 .leftstuff a { cursor:hover; text-decoration:none; color: #004700; }
 .leftboxheader{background-color: #F9F9F9; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:10px 12px; border-bottom: 1px solid #DDD; font-weight: bold; text-shadow: 0 1px 0 white; font-size: 12px; line-height: 16px;}
-.leftbtn{margin-right:-4px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; margin-left:18px;}
-.midbtn{margin-right:-4px; border-radius:0px;}
+.leftbtn{margin-right:-7px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; margin-left:18px;}
+.midbtn{margin-right:-7px; border-radius:0px;}
 .rightbtn{border-top-left-radius: 0px; border-bottom-left-radius: 0px;} 
 .leftboxheader a{text-shadow: 0 1px 0 white; font-size: 11px; line-height: 16px; padding:3px 7px; font-weight:normal;}
 .newsfeed>.leftboxheader{padding:6px 12px;}
@@ -96,7 +70,7 @@
 .userctrlpanel button { float:right; }
 .userctrlpanel p { margin:31px 0 0 0; color:#404040; font-weight: bold; font-size:12px; }
 .userctrlpanel span { font-size:11px; color:#404040; }
-.challengecarousel{ display:inline-block; }
+.challengecarousel{ display:inline-block; height: 78px; overflow: hidden; }
 .inlinedisplay { list-style-type: none; position:relative; margin: 0; bottom:6px;}
 .inlinedisplay li { display:inline; }
 .bar2 .mosaic-overlay { bottom:-20px; height:40px; opacity:0.8; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; filter:alpha(opacity=80); }
@@ -174,7 +148,7 @@
   color:#333;     
 }
 #topboxcontent{ width:729px; }
-#topboxcontent h1{ margin:0px; font-size:40px; display:inline; }
+#topboxcontent h1{ margin:0px; font-size:30px; display:inline; }
 .profilepersonaicons{ list-style-type: none; margin:3px 0px 13px 0px; display:inline; margin-left:4px; }
 .profilepersonaicons li{ display:inline-block; margin-right:8px; height:30px; width:30px; }
 .profilepersonaicons img{ margin-right:8px; height:30px; width:30px; }
@@ -240,3 +214,9 @@
 .CRresponsespace {display:inline-block;background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:9px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'Muli', sans-serif;width:56.5%;}
 .CRresponsespace textarea {display:block; margin:6px 12px 12px 12px; width:94%;}
 .CRbuttonspace {margin-top:12px; }
+
+#topsection { margin: 0; border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:10px; }
+.headerspace { padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; }
+#updatespace { background-color: #F9F9F9; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; padding: 12px 0 12px 12px; }
+.inlinedisplay { list-style-type: none; position:relative; margin: 0; }
+.inlinedisplay li{ display:inline; }
