Adding percent complete and points to section listings on dashboard.

--- a/app/views/paths/popups/_launchpad.html.haml
+++ b/app/views/paths/popups/_launchpad.html.haml
@@ -14,8 +14,8 @@
               %li.launchpad_link
                 = link_to s.name, launchpad_section_path(s), remote: true, style: "text-decoration: none;"+(s.unlocked?(current_user) ? "font-weight: bold" : "") 
                 %div.pointsandprogress
-                  %div 4,500 pts
-                  %div 45% complete   
+                  %div #{s.points_earned(current_user)} points
+                  %div #{s.percentage_complete(current_user)}%   
         = render "sections/launchpad"
 
 - if display
