--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -41,7 +41,7 @@
           %ul
             %li Location: #{@user.location || "A galaxy far, far away..."}
             - if @user.link
-              %li Link: <a href='#{@user.link}' target='_newtab'>#{@user.link}</a>
+              %li Link: <a href='#{@user.link}' target='_newtab'>#{truncate(@user.link)}</a>
             - if @user.education 
               %li Education: #{@user.education}
             - if @user.company_name
@@ -89,10 +89,4 @@
                 %blockquote{ style: "margin:20px;" }= r.submitted_answer.content
               - elsif r.task.answer_sub_type == 101
                 = link_to image_tag(sanitize(r.submitted_answer.content), class: "CRimage"), sanitize(r.submitted_answer.content), :target => "_blank"
-              %div.postfooter
-                %div.leftstuff
-                  %a.comment{ onclick: "$(this).parent().parent().find('.comments').slideDown();" } Comment(#{r.submitted_answer.comments.size})
-                %div.posttimestamp
-                  %p= r.created_at
-                %div.comments{ style: "display:none; text-align: left;" }
-                  = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id }
+              = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id, comment_count: r.submitted_answer.comments.size, created_at: r.created_at}
