--- a/app/assets/stylesheets/launchpad.css
+++ b/app/assets/stylesheets/launchpad.css
@@ -11,9 +11,9 @@
  width:880px;
  min-height:410px;
  margin: 100px auto;
- border:10px ridge white;
+ border:10px solid rgba(43, 43, 43, 0.69);
  text-align:left;
- border-radius: 16px;
+ border-radius: 10px;
  box-shadow: 0 0 50px 20px rgba(0, 0, 0, .05);
  padding:11px 11px 0 11px;
  background-color: #F9F9F9;
