--- a/app/views/pages/consumer_landing.html.haml
+++ b/app/views/pages/consumer_landing.html.haml
@@ -3,6 +3,7 @@
   #landinglogo{width:720px;margin-top:-40px; margin-bottom:-30px; }
   #buttonspace{ margin-top:30px;}
   #buttonspace a{ min-width:205px; }
+  #buttonspace img{height:30px;}
   #LogIn a, #Register a{ font-size:20px;width:160px;height:60px;font-weight:bold; text-align: center; vertical-align: center;}
   #tagline{ width:538px; margin-right:auto; margin-left:auto; text-align:center;}
   #tagline span{font-family:'MuliItalic'; font-size:15px; font-style:italic;}
